feat: finish use cases of rituals entity
